--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -19,6 +19,16 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2.2.2
       - run: docker pull debian:buster-slim
+      - name: Curl Cache
+        id: curl
+        uses: actions/cache@v2.1.6
+        with:
+          path: C:\ProgramData\chocolatey\bin\curl.exe
+          key: ${{ runner.os }}-curl
+      - name: Install curl
+        if: steps.curl.outputs.cache-hit != 'true'
+        run: choco install curl --acceptlicense --confirm --verbose
+        shell: cmd
       - uses: docker/login-action@v1
         if: github.ref == 'refs/heads/master'
         with:
