--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -11,22 +11,19 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: ["linux", "mac", "windows"]
 
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2.2.2
       - run: docker pull debian:buster-slim
       - uses: docker/login-action@v1
         if: github.ref == 'refs/heads/master'
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - uses: docker/build-push-action@v2
-        if: github.ref == 'refs/heads/master'
-        with:
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/spcomp:latest
-      - uses: docker/build-push-action@v2
-        if: github.ref != 'refs/heads/master'
-        with:
-          push: false
-          tags: lordgiganticus/spcomp:latest
+      - run: python Install.py ${{ matrix.os }} ${{ secrets.DOCKERHUB_USERNAME }}
+      - if: github.ref == 'refs/heads/master'
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/spcomp:${{ matrix.os }}
