--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         os: ["linux", "mac", "windows"]
@@ -19,21 +19,14 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2.2.2
       - run: docker pull debian:buster-slim
-      - name: Curl Cache
-        id: curl
-        uses: actions/cache@v2.1.6
-        with:
-          path: C:\ProgramData\chocolatey\bin\curl.exe
-          key: ${{ runner.os }}-curl
-      - name: Install curl
-        if: steps.curl.outputs.cache-hit != 'true'
-        run: choco install curl --acceptlicense --confirm --verbose
-        shell: cmd
       - uses: docker/login-action@v1
         if: github.ref == 'refs/heads/master'
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - run: |
+          sudo apt-get update
+          sudo apt-get install -y curl
       - run: python Install.py ${{ matrix.os }} ${{ secrets.DOCKERHUB_USERNAME }}
       - if: github.ref == 'refs/heads/master'
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/spcomp:${{ matrix.os }}
